# CoinTossing

./: .gitignore  CMakeLists.txt  CoinTossing.cpp  CoinTossing.h  Parties  main.cpp  run_protocol.sh
